www/manifests/cert-manager/www-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-www
  labels:
    name: nginx-www
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
        - nginx.local.net
      secretName: nginx-tls
  ingressClassName: nginx
  rules:
    - host: nginx.local.net
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx-www
                port:
                  number: 80
